# godot-composition

./: .editorconfig  .gitignore  LICENSE  README.md
addons/cs_wrapper_generator_for_gde/: CodeGenerator.BuiltinEnums.cs  CodeGenerator.Core.cs  CodeGenerator.Methods.cs  CodeGenerator.Properties.cs  CodeGenerator.Signals.cs  CodeGenerator.cs  GeneratorMain.cs  WrapperGeneratorMain.cs
addons/godot_composition/: Cargo.toml  godot_composition.gdextension.uid
addons/godot_composition/godot_composition/: Cargo.toml  godot_composition.gdextension
addons/godot_composition/godot_composition_core/: Cargo.toml
addons/godot_composition/godot_composition_tests/: Cargo.toml  gd_test_runner.tscn  godot_composition_tests.gdextension  godot_composition_tests.gdextension.uid  project.godot
addons/godot_composition/godot_composition_tests/src/: lib.rs
addons/godot_composition/godot_composition_tests/src/scripts/: component_with_multiple_fields.rs  mod.rs  process_test_component.rs  test_component.rs  test_component.rs.uid
addons/godot_composition/godot_composition_tests/src/tests/: godot_composition_world.rs  mod.rs  node_entity.rs  plugin.rs  test_object.rs
addons/godot_composition/src/: component.rs  component_with_class.rs  components_editor.rs  godot_composition_editor_plugin.rs  lib.rs  (+3 more)
addons/godot_composition_cs/: Component.cs  Component.cs.uid  GodotComposition.cs  GodotCompositionEditorPlugin.cs  GodotCompositionEditorPlugin.cs.uid  GodotCompositionWorld.cs  GodotCompositionWorld.cs.uid  NodeEntity.cs  NodeEntity.cs.uid  README.md  godotcomposition.cs.uid  plugin.cfg
addons/godot_composition_gd/: README.md  godot_composition.gd  godot_composition.gd.uid  plugin.cfg
(+30 files in other folders)
